--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 <body>
     <main class="main">
-        <aside class="container">
+        <div class="container">
             <section data-secao="modo">
-                <h2>
-                    Orçamento por:
-                </h2>
+                <h2>Orçamento por:</h2>
                 <div>
                     <button data-modo="industria">Indústria</button>
                     <button data-modo="residuos">Resíduos</button>
@@ -129,6 +127,7 @@
             </section>
 
             <section data-secao="informacoes-usuario" class="modal">
+                aasdasd
                 <aside class="residuo-info">
                     <h2 class="residuo-info__titulo"></h2>
                     <ul class="residuo-info__exemplos"></ul>
