Rename section observer classes and move them to sections folder under src/observers

--- a/index.html
+++ b/index.html
@@ -127,12 +127,36 @@
             </section>
 
             <section data-secao="informacoes-usuario" class="modal">
-                aasdasd
                 <aside class="residuo-info">
                     <h2 class="residuo-info__titulo"></h2>
                     <ul class="residuo-info__exemplos"></ul>
                     <p class="residuo-info__destinacao"></p>
                 </aside>
+                <div class="form-wrapper">
+                    <h2>Informações do Usuário</h2>
+                    <form action="">
+                        <label for="nome">Nome:</label>
+                        <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
+
+                        <label for="empresa">Nome da empresa:</label>
+                        <input type="text" name="empresa" id="empresa" placeholder="Nome da empresa">
+
+                        <label for="telefone-ddd">Telefone:</label>
+                        <input type="number" name="ddd" id="telefone-ddd">
+                        <input type="tel" name="telefone" id="telefone">
+
+                        <label for="CNPJ">CNPJ</label>
+                        <input type="text" name="cnpj" id="cnpj">
+
+                        <label for="endereco">Endereco</label>
+                        <input type="text" name="endereco" id="endereco">
+
+                        <div class="buttons-group">
+                            <button type="submit">Avançar</button>
+                            <button>Quotar outro tipo de resíduo</button>
+                        </div>
+                    </form>
+                </div>
             </section>
         </div>
     </main>
