--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="form-wrapper">
                     <h2>Cálculo do Montante</h2>
-                    <form action="">
+                    <form>
                         <label for="frequencia">Frequência:</label>
                         <input type="number" name="frequencia" id="frequencia"> por 
                         <select name="frequencia-periodo" id="frequencia-periodo">
@@ -134,7 +134,7 @@
                 </aside>
                 <div class="form-wrapper">
                     <h2>Informações do Usuário</h2>
-                    <form action="">
+                    <form>
                         <label for="nome">Nome:</label>
                         <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
 
