--- a/index.html
+++ b/index.html
@@ -11,137 +11,301 @@
 
 <body>
     <main class="main">
-        <div class="container">
-            <section data-secao="modo">
+        <section>
+            <header>
                 <h2>Solicitar orçamento</h2>
+                <div></div>
+            </header>
+            <div>
                 <p>Você pode optar por fazer o seu orçamento por:</p>
                 <div>
-                    <button data-modo="industria">Indústria</button>
-                    <button data-modo="residuos">Resíduos</button>
-                    <button data-modo="servicos">Serviços</button>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Indústria</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Serviço</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Resíduo</h3>
+                    </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <section data-secao="seletor-industria">
-                <h2>Escolha uma indústria</h2>
-                <div class="industrias"></div>
-            </section>
+        <section>
+            <header>
+                <h2>Indústrias</h2>
+                <div></div>
+            </header>
+            <div>
+                <div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Alimentícia</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Construção Civil</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Educação</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Empresarial</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Indústria</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Lazer</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Saúde</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Varejo</h3>
+                    </div>
+                </div>
+                <a href="#">Outra</a>
+            </div>
+        </section>
 
-            <section data-secao="seletor-servico">
-                <h2>Escolha um serviço</h2>
-                <div class="servicos"></div>
-            </section>
-
-            <section data-secao="residuos">
-                <h2>Escolha o resíduo</h2>
-                <div class="residuos-grid">
-                    <div class="residuo" data-residuo="comuns">
+        <section>
+            <header>
+                <h2>Resíduos</h2>
+                <div></div>
+            </header>
+            <div>
+                <p>Normalmente, a <strong>indústria alimentícia</strong> gera os seguintes tipos de resíduos:</p>
+                <div>
+                    <div>
+                        <img src="" alt="">
                         <h3>Comuns</h3>
                     </div>
-                    <div class="residuo" data-residuo="reciclaveis">
-                        <h3>Recicláveis</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Entulhos de Construção</h3>
                     </div>
-                    <div class="residuo" data-residuo="entulho-de-construcao">
-                        <h3>Entulho de Construção</h3>
-                    </div>
-                    <div class="residuo" data-residuo="medicamentos-vencidos">
-                        <h3>Medicamentos vencidos</h3>
-                    </div>
-                    <div class="residuo" data-residuo="lixo-eletronico">
-                        <h3>Lixo eletrônico</h3>
-                    </div>
-                    <div class="residuo" data-residuo="pilhas">
-                        <h3>Pilhas</h3>
-                    </div>
-                    <div class="residuo" data-residuo="lampadas">
+                    <div>
+                        <img src="" alt="">
                         <h3>Lâmpadas</h3>
                     </div>
-                    <div class="residuo" data-residuo="perfurocortantes">
-                        <h3>Perfurocortantes</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Lixo Eletrônico</h3>
                     </div>
-                    <div class="residuo" data-residuo="lodo">
+                    <div>
+                        <img src="" alt="">
+                        <h3>Lixos Infectantes</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
                         <h3>Lodo</h3>
                     </div>
-                    <div class="residuo" data-residuo="quimicos">
-                        <h3>Químico</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Medicamentos Vencidos</h3>
                     </div>
-                    <div class="residuo" data-residuo="lixos-infectantes">
-                        <h3>Lixos infectantes</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Perfurocortantes</h3>
                     </div>
-                    <div class="residuo" data-residuo="perigoso-classe-i">
-                        <h3>Perigoso (Classe I)</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Perigoso Classe I</h3>
                     </div>
-                    <div class="residuo" data-residuo="outros">
-                        <h3>Outros</h3>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Pilhas</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Químicas</h3>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>Recicláveis</h3>
                     </div>
                 </div>
-            </section>
+                <a href="#">Outro tipo de resíduo</a>
+            </div>
+        </section>
 
-            <section data-secao="calculo-montante" class="modal">
-                <aside class="residuo-info">
-                    <h2 class="residuo-info__titulo"></h2>
-                    <ul class="residuo-info__exemplos"></ul>
-                    <p class="residuo-info__destinacao"></p>
-                </aside>
-
-                <div class="form-wrapper">
-                    <h2>Cálculo do Montante</h2>
-                    <form>
-                        <label for="frequencia">Frequência:</label>
-                        <input type="number" name="frequencia" id="frequencia"> por 
-                        <select name="frequencia-periodo" id="frequencia-periodo">
+        <section>
+            <header>
+                <h2>Recicláveis</h2>
+                <div></div>
+            </header>
+            <div>
+                <form>
+                    <h3>Cálculo Montante</h3>
+                    <div>
+                        <label for="frequencia">Frequência</label>
+                        <input type="text" name="frequencia" id="frequencia"> por
+                        <select name="periodo" id="periodo">
+                            <option value="">Selecione a frequência de sua coleta</option>
                             <option value="semana">Semana</option>
                             <option value="mes">Mês</option>
                             <option value="trimestre">Trimestre</option>
                             <option value="semestre">Semestre</option>
+                            <option value="ano">Ano</option>
                         </select>
-
-                        <label for="acondicionamento">Acondicionamento (recipiente(s)):</label>
-                        <select name="acondicionamento" id="acondicionamento">
-                            <option value="">Escolha um recipiente</option>
-                        </select>
-
-                        <label for="quantidade-recipiente">Quantidade de recipientes por coleta:</label>
-                        <input type="range" name="quantidade-recipiente" id="quantidade-recipiente">
-
-                        <input type="submit" value="Avançar">
-                    </form>
-                </div>
-            </section>
-
-            <section data-secao="informacoes-usuario" class="modal">
-                <aside class="residuo-info">
-                    <h2 class="residuo-info__titulo"></h2>
-                    <ul class="residuo-info__exemplos"></ul>
-                    <p class="residuo-info__destinacao"></p>
+                        <span>Ex.: "2" por "semana"</span>
+                    </div>
+                    <div>
+                        <label for="recipiente">Recipiente</label>
+                        <span>Os recipientes disponíveis são
+                            definidos pelo tipo de resíduo.</span>
+                    </div>
+                    <button type="submit">Avançar</button>
+                </form>
+    
+                <aside>
+                    <h4>Exemplos</h4>
+                    <ul>
+                        <li>Papel</li>
+                        <li>Papelão</li>
+                        <li>Plásticos</li>
+                        <li>Vidros</li>
+                        <li>Metais não contaminados</li>
+                    </ul>
+    
+                    <h4>Destinação</h4>
+                    <p>Cooperativa de reciclagem</p>
                 </aside>
-                <div class="form-wrapper">
-                    <h2>Informações do Usuário</h2>
-                    <form>
-                        <label for="nome">Nome:</label>
-                        <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
+            </div>
+        </section>
 
-                        <label for="empresa">Nome da empresa:</label>
-                        <input type="text" name="empresa" id="empresa" placeholder="Nome da empresa">
+        <section>
+            <header>
+                <h2>Informações Pessoais</h2>
+                <div></div>
+            </header>
+            <div>
+                <form>
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome">
 
-                        <label for="telefone-ddd">Telefone:</label>
-                        <input type="tel" name="ddd" id="telefone-ddd">
-                        <input type="tel" name="telefone" id="telefone">
+                    <label for="telefone">Telefone com DDD</label>
+                    <input type="tel" name="telefone" id="telefone">
 
-                        <label for="CNPJ">CNPJ</label>
-                        <input type="text" name="cnpj" id="cnpj">
+                    <label for="email">E-mail</label>
+                    <input type="email" name="email" id="email">
 
-                        <label for="endereco">Endereco</label>
-                        <input type="text" name="endereco" id="endereco">
+                    <label for="empresa">Empresa</label>
+                    <input type="text" name="empresa" id="empresa">
 
-                        <div class="buttons-group">
-                            <button type="submit">Avançar</button>
-                            <button>Quotar outro tipo de resíduo</button>
-                        </div>
-                    </form>
+                    <label for="cnpj">CNPJ</label>
+                    <input type="text" name="cnpj" id="cnpj">
+
+                    <label for="cep">CEP</label>
+                    <input type="text" name="cep" id="cep">
+
+                    <label for="endereco">Endereço</label>
+                    <input type="text" name="endereco" id="endereco">
+
+                    <label for="numero">Nº</label>
+                    <input type="text" name="numero" id="numero">
+
+                    <label for="complemento">Complemento</label>
+                    <input type="text" name="complemento" id="complemento">
+
+                    <button type="submit">Avançar</button>
+                </form>
+            </div>
+        </section>
+
+        <section>
+            <header>
+                <h2>Revise seu pedido:</h2>
+                <div></div>
+            </header>
+
+            <div>
+                <div>
+                    <h3>Indústria:</h3>
+                    <p>Alimentícia</p>
+                    <h3>Resíduo:</h3>
+                    <p>Recicláveis</p>
+                    <h3>Frequência:</h3>
+                    <p>2x por semana</p>
+                    <h3>Recipiente(s):</h3>
+                    <ul>
+                        <li>contêiner 240l (2)</li>
+                        <li>container 1.100l (3)</li>
+                        <li>caçamba de 5m3 (1)</li>
+                    </ul>
+                    <div>
+                        <a href="#">Editar</a>
+                        <a href="#">Excluir</a>
+                    </div>
                 </div>
-            </section>
-        </div>
+                <div>
+                    <h3>
+                        Informações de Contato:
+                    </h3>
+                    <ul>
+                        <li>Roberto de Souza e Silva</li>
+                        <li>(21) 99887-6655</li>
+                        <li>Sempre Limpa Ltda.</li>
+                        <li>Rua Presidente Vargas, 1234</li>
+                    </ul>
+                    <div>
+                        <a href="#">Editar</a>
+                    </div>
+                </div>
+
+                <div>
+                    <button>Acrescentar resíduo</button>
+                    <button type="submit">Enviar Pedido</button>
+                </div>
+            </div>
+        </section>
+
+        <aside>
+            <div>
+                <h3>Indústria:</h3>
+                <p>Alimentícia</p>
+                <h3>Resíduo:</h3>
+                <p>Recicláveis</p>
+                <h3>Frequência:</h3>
+                <p>2x por semana</p>
+                <h3>Recipiente(s):</h3>
+                <ul>
+                    <li>contêiner 240l (2)</li>
+                    <li>container 1.100l (3)</li>
+                    <li>caçamba de 5m3 (1)</li>
+                </ul>
+                <div>
+                    <a href="#">Editar</a>
+                    <a href="#">Excluir</a>
+                </div>
+            </div>
+
+            <div>
+                <h3>Informações de Contato:</h3>
+                <ul>
+                    <li>Roberto de Souza e Silva</li>
+                    <li>(21) 99887-6655</li>
+                    <li>Sempre Limpa Ltda.</li>
+                    <li>R. Presidente Vargas, 1234</li>
+                </ul>
+                <div>
+                    <div>
+                        <a href="#">Corrigir</a>
+                    </div>
+                </div>
+            </div>
+        </aside>
     </main>
 
     <script src="./app.js"></script>
