--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="main">
         <div class="container">
-            <section data-step="modo-de-pesquisa">
+            <section data-section="modo-de-pesquisa">
                 <header>
                     <h2>Solicitar orçamento</h2>
                     <div></div>
@@ -20,19 +20,19 @@
                 <div>
                     <p>Você pode optar por fazer o seu orçamento por:</p>
                     <div>
-                        <a href="#" data-state-modo="industrias" data-step-action="industrias">
+                        <a href="#" data-state-modo="industrias" data-section-action="industrias">
                             <div>
                                 <img src="" alt="">
                                 <h3>Indústria</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-modo="servicos" data-step-action="servicos">
+                        <a href="#" data-state-modo="servicos" data-section-action="servicos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Serviço</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-modo="residuos" data-step-action="residuos">
+                        <a href="#" data-state-modo="residuos" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Resíduo</h3>
@@ -42,56 +42,56 @@
                 </div>
             </section>
 
-            <section data-step="industrias">
+            <section data-section="industrias">
                 <header>
                     <h2>Indústrias</h2>
                     <div></div>
                 </header>
                 <div>
                     <div>
-                        <a href="#" data-state-industria="alimenticia" data-step-action="residuos">
+                        <a href="#" data-state-industria="alimenticia" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Alimentícia</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="construcao-civil" data-step-action="residuos">
+                        <a href="#" data-state-industria="construcao-civil" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Construção Civil</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="educacao" data-step-action="residuos">
+                        <a href="#" data-state-industria="educacao" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Educação</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="empresarial" data-step-action="residuos">
+                        <a href="#" data-state-industria="empresarial" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Empresarial</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="industria" data-step-action="residuos">
+                        <a href="#" data-state-industria="industria" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Indústria</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="lazer" data-step-action="residuos">
+                        <a href="#" data-state-industria="lazer" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lazer</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="saude" data-step-action="residuos">
+                        <a href="#" data-state-industria="saude" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Saúde</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="varejo" data-step-action="residuos">
+                        <a href="#" data-state-industria="varejo" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Varejo</h3>
@@ -102,40 +102,40 @@
                 </div>
             </section>
 
-            <section data-step="servicos">
+            <section data-section="servicos">
                 <header>
                     <h2>Serviços</h2>
                     <div></div>
                 </header>
                 <div>
                     <div>
-                        <a href="" data-state-servico="gestao-de-residuos" data-step-action="residuos">
+                        <a href="" data-state-servico="gestao-de-residuos" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Gestão de Resíduos</h3>
                             </div>
                         </a>
-                        <a href="" data-state-servico="tratamento-de-residuos" data-step-action="residuos">
+                        <a href="" data-state-servico="tratamento-de-residuos" data-section-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Tratamento de Resíduos</h3>
                             </div>
                         </a>
-                        <a href="" data-state-servico="pgrs" data-step-action="informacoes-pessoais">
+                        <a href="" data-state-servico="pgrs" data-section-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>PGRS</h3>
                             </div>
                         </a>
                         <a href="" data-state-servico="remocao-de-lodo-e-descarte-de-efluentes"
-                            data-step-action="informacoes-pessoais">
+                            data-section-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>Remoção de Lodo e Descarte de Efluentes</h3>
                             </div>
                         </a>
                         <a href="" data-state-servico="limpeza-de-fossa-septica"
-                            data-step-action="informacoes-pessoais">
+                            data-section-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>Limpeza de fossa séptica</h3>
@@ -146,7 +146,7 @@
                 </div>
             </section>
 
-            <section data-step="residuos">
+            <section data-section="residuos">
                 <header>
                     <h2>Resíduos</h2>
                     <div></div>
@@ -155,73 +155,73 @@
                     <p>Normalmente, a <strong>indústria alimentícia</strong> gera os seguintes tipos de resíduos:
                     </p>
                     <div>
-                        <a href="#" data-state-residuo="comuns" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="comuns" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Comuns</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="entulhos-de-construcao" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="entulhos-de-construcao" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Entulhos de Construção</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lampadas" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="lampadas" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lâmpadas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixo-eletronico" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="lixo-eletronico" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixo Eletrônico</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixos-infectantes" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="lixos-infectantes" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixos Infectantes</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lodo" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="lodo" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lodo</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="medicamentos-vencidos" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="medicamentos-vencidos" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Medicamentos Vencidos</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="perfurocortantes" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="perfurocortantes" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Perfurocortantes</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="perigoso-classe-i" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="perigoso-classe-i" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Perigoso Classe I</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="pilhas" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="pilhas" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Pilhas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="quimicas" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="quimicas" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Químicas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="reciclaveis" data-step-action="calculo-montante">
+                        <a href="#" data-state-residuo="reciclaveis" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Recicláveis</h3>
@@ -232,7 +232,7 @@
                 </div>
             </section>
 
-            <section data-step="calculo-montante">
+            <section data-section="calculo-montante">
                 <header>
                     <h2>Recicláveis</h2>
                     <div></div>
@@ -277,7 +277,7 @@
                 </div>
             </section>
 
-            <section data-step="informacoes-pessoais">
+            <section data-section="informacoes-pessoais">
                 <header>
                     <h2>Informações Pessoais</h2>
                     <div></div>
@@ -316,7 +316,7 @@
                 </div>
             </section>
 
-            <section data-step="revisao">
+            <section data-section="revisao">
                 <header>
                     <h2>Revise seu pedido:</h2>
                     <div></div>
