--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <h3>Comuns</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="entulhos-de-construcao" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="entulho-de-construcao" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Entulhos de Construção</h3>
@@ -215,7 +215,7 @@
                                 <h3>Pilhas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="quimicas" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="quimicos" data-section-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Químicas</h3>
