--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <div>
                     <p>Você pode optar por fazer o seu orçamento por:</p>
                     <div>
-                        <a href="#" data-state-modo="industrias" data-section-action="industrias">
+                        <a href="#" data-state-modo="industrias" data-action="industrias">
                             <div>
                                 <img src="" alt="">
                                 <h3>Indústria</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-modo="servicos" data-section-action="servicos">
+                        <a href="#" data-state-modo="servicos" data-action="servicos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Serviço</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-modo="residuos" data-section-action="residuos">
+                        <a href="#" data-state-modo="residuos" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Resíduo</h3>
@@ -49,49 +49,49 @@
                 </header>
                 <div>
                     <div>
-                        <a href="#" data-state-industria="alimenticia" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="alimenticia" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Alimentícia</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="construcao-civil" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="construcao-civil" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Construção Civil</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="educacao" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="educacao" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Educação</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="empresarial" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="empresarial" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Empresarial</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="industria" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="industria" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Indústria</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="lazer" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="lazer" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lazer</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="saude" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="saude" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Saúde</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-industria="varejo" data-section-action="residuos">
+                        <a href="#" class="residuo__card" data-state-industria="varejo" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Varejo</h3>
@@ -109,33 +109,33 @@
                 </header>
                 <div>
                     <div>
-                        <a href="" data-state-servico="gestao-de-residuos" data-section-action="residuos">
+                        <a href="" data-state-servico="gestao-de-residuos" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Gestão de Resíduos</h3>
                             </div>
                         </a>
-                        <a href="" data-state-servico="tratamento-de-residuos" data-section-action="residuos">
+                        <a href="" data-state-servico="tratamento-de-residuos" data-action="residuos">
                             <div>
                                 <img src="" alt="">
                                 <h3>Tratamento de Resíduos</h3>
                             </div>
                         </a>
-                        <a href="" data-state-servico="pgrs" data-section-action="informacoes-pessoais">
+                        <a href="" data-state-servico="pgrs" data-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>PGRS</h3>
                             </div>
                         </a>
                         <a href="" data-state-servico="remocao-de-lodo-e-descarte-de-efluentes"
-                            data-section-action="informacoes-pessoais">
+                            data-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>Remoção de Lodo e Descarte de Efluentes</h3>
                             </div>
                         </a>
                         <a href="" data-state-servico="limpeza-de-fossa-septica"
-                            data-section-action="informacoes-pessoais">
+                            data-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>Limpeza de fossa séptica</h3>
@@ -154,74 +154,74 @@
                 <div>
                     <p>Normalmente, a <strong>indústria alimentícia</strong> gera os seguintes tipos de resíduos:
                     </p>
-                    <div>
-                        <a href="#" data-state-residuo="comuns" data-section-action="calculo-montante">
+                    <div class="residuos__wrapper">
+                        <a href="#" data-state-residuo="comuns" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Comuns</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="entulho-de-construcao" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="entulho-de-construcao" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Entulhos de Construção</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lampadas" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="lampadas" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lâmpadas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixo-eletronico" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="lixo-eletronico" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixo Eletrônico</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixos-infectantes" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="lixos-infectantes" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixos Infectantes</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lodo" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="lodo" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lodo</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="medicamentos-vencidos" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="medicamentos-vencidos" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Medicamentos Vencidos</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="perfurocortantes" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="perfurocortantes" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Perfurocortantes</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="perigoso-classe-i" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="perigoso-classe-i" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Perigoso Classe I</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="pilhas" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="pilhas" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Pilhas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="quimicos" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="quimicos" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Químicas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="reciclaveis" data-section-action="calculo-montante">
+                        <a href="#" data-state-residuo="reciclaveis" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Recicláveis</h3>
