--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                                 <h3>Remoção de Lodo e Descarte de Efluentes</h3>
                             </div>
                         </a>
-                        <a href="" data-state-servico="limpeza-de-fossa-septica"
-                            data-action="informacoes-pessoais">
+                        <a href="" data-state-servico="limpeza-de-fossa-septica" data-action="informacoes-pessoais">
                             <div>
                                 <img src="" alt="">
                                 <h3>Limpeza de fossa séptica</h3>
@@ -173,13 +172,13 @@
                                 <h3>Lâmpadas</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixo-eletronico" data-action="calculo-montante">
+                        <a href="#" data-state-residuo="eletronico" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixo Eletrônico</h3>
                             </div>
                         </a>
-                        <a href="#" data-state-residuo="lixos-infectantes" data-action="calculo-montante">
+                        <a href="#" data-state-residuo="infectantes" data-action="calculo-montante">
                             <div>
                                 <img src="" alt="">
                                 <h3>Lixos Infectantes</h3>
