--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 </div>
             </section>
 
-            <aside data-aside>
+            <!-- <aside data-aside>
                 <div>
                     <h3>Indústria:</h3>
                     <p>Alimentícia</p>
@@ -394,7 +394,7 @@
                         </div>
                     </div>
                 </div>
-            </aside>
+            </aside> -->
         </div>
     </main>
 
