--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="main">
+    <!-- <main class="main">
         <div class="container">
             <section data-section="modo-de-pesquisa">
                 <header>
@@ -360,7 +360,7 @@
                 </div>
             </section>
 
-            <!-- <aside data-aside>
+            <aside data-aside>
                 <div>
                     <h3>Indústria:</h3>
                     <p>Alimentícia</p>
@@ -394,10 +394,47 @@
                         </div>
                     </div>
                 </div>
-            </aside> -->
+            </aside>
         </div>
-    </main>
+    </main> -->
 
+    <main class="main">
+        <form class="form">
+            <section class="section">
+                <header class="section__header">
+                    <div class="container">
+                        <h2 class="section__title">Solicitar orçamento</h2>
+                    </div>
+                </header>
+                <div class="section__content">
+                    <p class="section__description">Você pode optar por fazer o seu orçamento por:</p>
+                    <div class="section__cards services"></div>
+                </div>
+            </section>
+
+            <section class="section">
+                <header class="section__header">
+                    <div class="container">
+                        <h2 class="section__title"></h2>
+                    </div>
+                </header>
+                <div class="section__content">
+                    <p class="section__description"></p>
+                </div>
+            </section>
+
+            <section class="section">
+                <header class="section__header">
+                    <div class="container">
+                        <h2 class="section__title"></h2>
+                    </div>
+                </header>
+                <div class="section__content">
+                    <p class="section__description"></p>
+                </div>
+            </section>
+        </form>
+    </main>
     <script src="./app.js"></script>
 </body>
 
