--- a/index.html
+++ b/index.html
@@ -400,37 +400,46 @@
 
     <main class="main">
         <form class="form">
-            <section class="section">
+            <section class="section" data-section="modo-de-pesquisa">
                 <header class="section__header">
                     <div class="container">
                         <h2 class="section__title">Solicitar orçamento</h2>
                     </div>
                 </header>
                 <div class="section__content">
-                    <p class="section__description">Você pode optar por fazer o seu orçamento por:</p>
-                    <div class="section__cards services"></div>
+                    <div class="container">
+                        <p class="section__description">Você pode optar por fazer o seu orçamento por:</p>
+                        <div class="section__cards">
+                            
+                        </div>
+                    </div>
                 </div>
             </section>
 
-            <section class="section">
+            <section class="section" data-section="industrias">
+                <header class="section__header">
+                    <div class="container">
+                        <h2 class="section__title">Indústrias</h2>
+                    </div>
+                </header>
+                <div class="section__content">
+                    <div class="container">
+                        <p class="section__description"></p>
+                        <div class="section__cards"></div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section" data-section="residuos">
                 <header class="section__header">
                     <div class="container">
                         <h2 class="section__title"></h2>
                     </div>
                 </header>
                 <div class="section__content">
-                    <p class="section__description"></p>
-                </div>
-            </section>
-
-            <section class="section">
-                <header class="section__header">
                     <div class="container">
-                        <h2 class="section__title"></h2>
+                        <div class="section__cards"></div>
                     </div>
-                </header>
-                <div class="section__content">
-                    <p class="section__description"></p>
                 </div>
             </section>
         </form>
