--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </div>
                             <div>
                                 <h3>Informações de Contato:</h3>
-                                <div data-state-contato></div>
+                                <div data-contato></div>
                                 <a href="#" data-section-action="informacoes-pessoais">Editar</a>
                             </div>
 
